# AMSI-Bypass

./: amsi_test.ps1
.github/workflows/: .build.yml.un~  build.yml
Patching_AmsiScanBuffer/: .Cargo.toml.un~  Cargo.toml  amsi_test.ps1
Patching_AmsiScanBuffer/src/: .lib.rs.un~  lib.rs
